RESOLVED FIXED 281617
Another follow up build fix for VisionOS after 285485@main
https://bugs.webkit.org/show_bug.cgi?id=281617
Summary Another follow up build fix for VisionOS after 285485@main
Chris Dumez
Reported 2024-10-16 13:49:07 PDT
build fix for VisionOS after 285485@main
Attachments
Radar WebKit Bug Importer
Comment 1 2024-10-16 13:49:21 PDT
Chris Dumez
Comment 2 2024-10-16 13:50:40 PDT
EWS
Comment 3 2024-10-16 14:36:27 PDT
Committed 285291@main (364c39db9715): <https://commits.webkit.org/285291@main> Reviewed commits have been landed. Closing PR #35313 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.