Unreviewed, Another follow up build fix for VisionOS after 285485@main https://bugs.webkit.org/show_bug.cgi?id=281617 rdar://138060896

* Source/WebKit/Platform/ios/VideoReceiverEndpointMessage.h:
(WebKit::VideoReceiverEndpointMessage::mediaElementIdentifier const):
(WebKit::VideoReceiverEndpointMessage::playerIdentifier const):

Canonical link: https://commits.webkit.org/285291@main